fix: auto height resize map when too large screen - restaurant page

--- a/css/styles.css
+++ b/css/styles.css
@@ -363,7 +363,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 
   .inside #map-container {
     background: blue none repeat scroll 0 0;
-    height: 87%;
+    height: calc(100% - 83px);
     position: fixed;
     right: 0;
     top: 80px;
